fixed filter size issue on mobile

--- a/src/css/Filter.css
+++ b/src/css/Filter.css
@@ -50,3 +50,21 @@
 .transaction-filter-footer button {
   font-size: 1em;
 }
+
+@media (max-width: 700px) {
+  .transaction-filters.active {
+    max-height: 300px;
+    font-size: 0.9em;
+  }
+
+  .transaction-filter-container .filter input {
+    max-width: 125px;
+  }
+}
+
+@media (max-width: 300px) {
+  .transaction-filters.active {
+    max-height: 400px;
+    font-size: 0.8em;
+  }
+}
